WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73441
[Qt][WK2] ASSERT at QQuickWebViewPrivate::computeViewportConstraints() when API test is exercising zero sized views.
https://bugs.webkit.org/show_bug.cgi?id=73441
Summary
[Qt][WK2] ASSERT at QQuickWebViewPrivate::computeViewportConstraints() when A...
alan
Reported
2011-11-30 06:38:13 PST
[Qt][WK2] ASSERT at QQuickWebViewPrivate::computeViewportConstraints() when API test is exercising zero sized views.
Attachments
Patch
(2.94 KB, patch)
2011-11-30 06:39 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2011-11-30 06:39:55 PST
Created
attachment 117184
[details]
Patch
alan
Comment 2
2011-11-30 06:52:41 PST
Kenneth, we've discussed marking the constraints with invalid flag, but it got me thinking whether it is different from the default value. Some constraints need to be applied no matter what and probably that should be the default constrains values. If we mark an instance with invalid flag, what values would the interaction engine be using across the code? The previously set or the default? The default values would fit perfectly with the current code which is exactly the same situation, when no values set yet on the interaction engine instance. I am all for introducing the isValid flag, when the interaction engine code is ready/capable to use it. Let me know If i missed something
Kenneth Rohde Christiansen
Comment 3
2011-12-01 02:28:47 PST
Comment on
attachment 117184
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117184&action=review
> Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp:211 > + // Return default values for zero sized viewport.
Maybe add a comment that this will be ignored, ie. not applied
WebKit Review Bot
Comment 4
2011-12-02 01:15:32 PST
Comment on
attachment 117184
[details]
Patch Clearing flags on attachment: 117184 Committed
r101763
: <
http://trac.webkit.org/changeset/101763
>
WebKit Review Bot
Comment 5
2011-12-02 01:15:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug