[Qt][WK2] ASSERT at QQuickWebViewPrivate::computeViewportConstraints() when API test is exercising zero sized views. https://bugs.webkit.org/show_bug.cgi?id=73441

Do not assert on empty available size, but return default constrain values instead.

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2011-12-02
Reviewed by Kenneth Rohde Christiansen.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::computeViewportConstraints):
* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::dispatchViewportPropertiesDidChange):

Canonical link: https://commits.webkit.org/90234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101763 268f45cc-cd09-0410-ab3c-d52691b4dbfc